Fixed spacing of a travel card title

--- a/craft/templates/elements/components/posts/_posts-excerpts.scss
+++ b/craft/templates/elements/components/posts/_posts-excerpts.scss
@@ -81,6 +81,9 @@
   .o-post_travel-dates {
     margin: 0 0 .75em;
   }
+  .c-post-lead_title {
+    margin-top: .25em;
+  }
   .c-body--dark & .c-post-lead_title {
     color: #EEE;
   }
